[package]
name = "rua_net_mgr"
version = "0.1.0"
authors = ["fjhg19930505 <ziyoulu1993@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rua_value_list = { git = "https://github.com/fjhg19930505/rua_value_list.git" }